# projektMMM

./: CMakeLists.txt  README.md  READMEE.md  main.cpp  mainwindow.cpp  mainwindow.h  od piotrka.cpp
include/: force.h  mainwindow.h
src/: force.cpp  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  mainwindow.ui.autosave.KdPMEK  testing-od-piotrka.cpp
